# Flouds.VectorDB

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.txt  LICENSE  README.md  SECURITY.md  add_header.py  admin_console.txt  admin_credentials.txt  build-flouds-vector.ps1  clean_proj.bat  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  start-flouds-vectordb.ps1  start-flouds-vectordb.sh  test_warnings.txt  venv-requirements-backup.txt
app/: __init__.py  app_init.py  healthcheck.py  logger.py  main.py  requirements.txt  setup.py
data/: .encryption_key  admin_credentials.txt
docs/: CLEANUP_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_STANDARDS.md  ENHANCED_ERROR_RESPONSES.md  ERROR_HANDLING_OPTIMIZATION.md  FUNCTION_REFACTORING.md  NAMING_CONSISTENCY_FIXES.md  README.md  SERVICE_PATTERNS.md  USAGE_EXAMPLES.md  api-examples.md  enhance-openapi.py  postman-collection.json  test-endpoints.sh
examples/: common.py  error_handling_example.py  generate_schema_example.py  model_specific_workflow.py  tenant_setup_workflow.py
milvus/: attu-standalone.bat  attu-standalone.sh  clean-text.bat  milvus-run-with-parameters.txt  milvus-standalone.bat  milvus-standalone.ps1  milvus-standalone.sh
tests/: __init__.py  conftest.py  insert.json  search.json  test_appsettings_validation.py  test_auth_middleware.py  test_config_fixtures.py  test_config_integration.py  test_config_service.py  test_config_validation.py  test_configuration.py  test_connection_pool.py  test_connection_pool_close.py  (+16 more)
(+79 files in other folders)
