[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flouds-vector"
version = "1.0.0"
description = "Multi-tenant vector store using Milvus"
requires-python = ">=3.10"

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
ignore_missing_imports = true
python_version = "3.12"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
